qnode41_prod_arch_env/qnode41_postgresql/templates/inicials/pgadmin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-app-ingress
  namespace: postgres
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: "pgadmin.smartquail.smartquail.io"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: pgadmin-service
              port:
                number: 80
